--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +15,7 @@
 </style>
 
 <body>
+    <h1>yoni</h1>
     <h1 class="yoni">Yoni Bitew</h1>
     <ul class="ulul">
         <li><img src="profile_pic.JPG" alt=""></li>
@@ -27,38 +29,43 @@
          <div class="image1">
     </div> -->
     <div class="life">
-    <h2>Fullstack Developer</h2>
-    <p class="one"><i class="fas fa-envelope-square"></i> <a href="Yonatansamfisher@gmail.com">Yonatansamfisher@gmail.com</a></p>
-    <p class="two"> 
-    <i class="fab fa-linkedin"><a href="https://www.linkedin.com/in/yoni-bitew-955b971bb/" target="_blank">Linkedin Profile</a> </i>
-    </p>
-    <div class="three"><i class="fab fa-github"></i> <a href="https://github.com/YoniB1995" target="_blank">GitHub profile</a></div>
-    <div class="four"><i class="fas fa-mobile-alt"></i>
-    <b>0538276526</b> <button class="button">Call</button>
-    </div>
-
-
-
-    <div class="new">
-        <h2>Background</h2>
-        <p>25 , Born in Israel.
-            <br> lives at Hadera<br> Student at "Tech-Career"
+        <h2>Fullstack Developer</h2>
+        <p class="one"><i class="fas fa-envelope-square"></i> <a
+                href="Yonatansamfisher@gmail.com">Yonatansamfisher@gmail.com</a></p>
+        <p class="two">
+            <i class="fab fa-linkedin"><a href="https://www.linkedin.com/in/yoni-bitew-955b971bb/"
+                    target="_blank">Linkedin Profile</a> </i>
         </p>
-        <h2>Education</h2>
-        <p>12 years High School graduate with a full Matriculation Certificate</p>
-        <br>
-        Learned Oral torah and Geography
-        <h2>Career</h2>
-        <p><b>2014</b> - Joins the IDF as a Combat Soldier at Kfir Brigade</p>
-        <p><b>2015-2017</b> - Commander Kfir Brigade & becomes an Officer </p>
-        <p><b>2018-2020</b> <br> Joins Combat brigade "Bradelas"  and becomes an "Troop" leader <br> that manages 20 commanders and 100 soldiers. </p>
-        <h2>Hobbies</h2>
-        <p>Travelling <i class="fas fa-route"></i>  Basketball <i class="fas fa-basketball-ball"></i> Dogs <i class="fas fa-dog"></i></p>
-    
-        
-    </div>
-    <div class="nav_bar">
-        <ul></ul>
+        <div class="three"><i class="fab fa-github"></i> <a href="https://github.com/YoniB1995" target="_blank">GitHub
+                profile</a></div>
+        <div class="four"><i class="fas fa-mobile-alt"></i>
+            <b>0538276526</b> <button class="button">Call</button>
+        </div>
+
+
+
+        <div class="new">
+            <h2>Background</h2>
+            <p>25 , Born in Israel.
+                <br> lives at Hadera<br> Student at "Tech-Career"
+            </p>
+            <h2>Education</h2>
+            <p>12 years High School graduate with a full Matriculation Certificate</p>
+            <br>
+            Learned Oral torah and Geography
+            <h2>Career</h2>
+            <p><b>2014</b> - Joins the IDF as a Combat Soldier at Kfir Brigade</p>
+            <p><b>2015-2017</b> - Commander Kfir Brigade & becomes an Officer </p>
+            <p><b>2018-2020</b> <br> Joins Combat brigade "Bradelas" and becomes an "Troop" leader <br> that manages 20
+                commanders and 100 soldiers. </p>
+            <h2>Hobbies</h2>
+            <p>Travelling <i class="fas fa-route"></i> Basketball <i class="fas fa-basketball-ball"></i> Dogs <i
+                    class="fas fa-dog"></i></p>
+
+
+        </div>
+        <div class="nav_bar">
+            <ul></ul>
             <li class="nav_1">Background</li>
             <br>
             <li class="nav_2">Education</li>
@@ -71,7 +78,8 @@
             <br>
             <li class="nav_5">Who am i?</li>
 
-        </ul>
-    </div>
+            </ul>
+        </div>
 </body>
+
 </html>
